# RCPU_OS

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
modules/: dummy.out  verjaardagskaart.out  whats_this.out
src/: gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  rcpu.rs  terminal.rs
src/arch/x86_64/: boot.asm  grub.cfg  mkgrubcfg.sh
src/rcpu/: mod.rs  operations.rs
