[package]
name = "rcpu_os"
version = "0.1.0"
authors = ["Robbe Van Herck <robbe@robbevanherck.be>"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.1.0"
spin = "0.4.5"
x86_64 = "0.12.1"
multiboot2 = "0.10.1"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

